# awale

./: .gitignore  README.md  ai.py  ai_simulation.py  awale.kv  awale.py  client.py  core.py  gui_simulator.py  protocol.py  run_ia.py  server.py  standalone_server.py  test_kivy.py
R/: simple_client.R
awale/: ai_simulation.py  client.py  core.py  protocol.py  random_ai.py  server.py
awale/ai/: minmax.py  random.py  random_ai.py  small_heap_ai.py
awale/gui/: console.py  player_view.py  player_view.ui  qtgame.py  qtgame.ui  simulator.py  simulator.ui  ui_player_view.py  ui_qtgame.py  ui_simulator.py
awale/gui/kvgame/: app.py  board.py  game_state.py  hole.py  player_logic.py
awalecpp/: CMakeLists.txt  game.hpp  random_strategy.hpp  runner.cpp  utils.hpp
awalecpp/benchmark/: CMakeLists.txt
awalecpp/include/: basic_minmax.hpp  game.hpp  process_args.hpp  utils.hpp
awalecpp/include/strategies/: first.hpp  random_strategy.hpp
awalecpp/src/: CMakeLists.txt  runner.cpp
awalecpp/test/: CMakeLists.txt  test_game.cpp  test_minmax.cpp
